Bug 226123 - preview window should not be dialog window of main window
Summary: preview window should not be dialog window of main window
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Harald Hvaal
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-10 11:19 UTC by Martin Koller
Modified: 2010-02-11 03:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2010-02-10 11:19:48 UTC
Version:           2.14 (using 4.3.98 (KDE 4.3.98 (KDE 4.4 RC3)) "release 218", KDE:KDE4:Factory:Desktop / openSUSE_11.2)
Compiler:          gcc
OS:                Linux (i686) release 2.6.31.12-0.1-desktop

It is inconvenient that the preview window is a dialog window, as it can not be brought behind the ark mainwindow and therefore I can not easily open a second preview window.
Please make the preview another toplevel window without ark's mainwindow as parent.
Comment 1 Raphael Kubo da Costa 2010-02-11 03:23:56 UTC
SVN commit 1088502 by rkcosta:

Make preview dialogs behave as windows, not dialogs.

Commit 1067160 made the preview dialogs non-modal, but they still
appeared on top of the main window. Now we set them as Qt::Window's
so that this does not happen.

BUG: 226123

 M  +3 -3      arkviewer.cpp  
 M  +1 -1      arkviewer.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1088502
Comment 2 Raphael Kubo da Costa 2010-02-11 03:27:03 UTC
SVN commit 1088503 by rkcosta:

Backport r1088502.

Make preview dialogs behave as windows, not dialogs.

Commit 1067160 made the preview dialogs non-modal, but they still
appeared on top of the main window. Now we set them as Qt::Window's
so that this does not happen.

CCBUG: 226123


 M  +3 -3      arkviewer.cpp  
 M  +1 -1      arkviewer.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1088503