Make preview dialogs behave as windows, not dialogs.

Commit 1067160 made the preview dialogs non-modal, but they still
appeared on top of the main window. Now we set them as Qt::Window's
so that this does not happen.

BUG: 226123

svn path=/trunk/KDE/kdeutils/ark/; revision=1088502